# Clinical-Risk-Prediction-for-Heart--Disease

./: README.md  pyproject.toml  test.html
notebooks/: 01_eda_and_preprocessing.ipynb  02_statistical_inference.ipynb  03_logistic_regression_model.ipynb  04_model_evaluation.ipynb  eda_and_preprocessing.ipynb
src/clinical_risk/: descriptive.py  inference.py  modeling.py  plotting.py  train_eval.py  utils.py
